# OOP-labs-2024

./: README.md  main.cpp
lw-2/: Twelve.cpp
lw1/: main.cpp
lw2/: CMakeLists.txt  main.cpp
lw2/include/: Twelve.h
lw2/tests/: twelve_tests.cpp
lw3/: CMakeLists.txt  main.cpp
lw3/include/: Array.h  Figure.h  Pentagon.h  Rhombus.h  Trapezoid.h
lw3/src/: Figure.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp
lw3/tests/: geometry_tests.cpp
lw4/: CMakeLists.txt  main.cpp
lw4/include/: Array.h  Figure.h  Pentagon.h  Point.h  Rhombus.h  Trapezoid.h
lw4/src/: Figure.cpp  Pentagon.cpp  Rhombus.cpp  Trapezoid.cpp
lw4/tests/: geometry_tests.cpp
lw5/: CMakeLists.txt  main.cpp
lw5/include/: CustomList.h  CustomMemoryResource.h
lw5/src/: CustomMemoryResource.cpp
lw5/tests/: custom_list_tests.cpp
lw6/: CMakeLists.txt  main.cpp
lw6/include/: BattleVisitor.h  Location.h  NPC.h  NPCFactory.h  ScreenObserver.h
lw6/src/: BattleVisitor.cpp  FileObserver.cpp  Location.cpp  NPC.cpp  NPCFactory.cpp  ScreenObserver.cpp
lw6/tests/: test_main.cpp
lw7/: CMakeLists.txt  main.cpp
lw7/include/: FileObserver.h  NPC.h  Observer.h
lw7/src/: NPC.cpp  NPCFactory.cpp
lw7/tests/: test_main.cpp
